feat: init service base