@@ -1,22 +1,19 @@
 package org.dainn.apigateway.config;
 
+import org.springframework.cloud.gateway.filter.GatewayFilter;
 import org.springframework.context.annotation.Bean;
 import org.springframework.context.annotation.Configuration;
-import org.springframework.core.convert.converter.Converter;
-import org.springframework.security.authentication.AbstractAuthenticationToken;
+import org.springframework.http.HttpHeaders;
+import org.springframework.http.server.reactive.ServerHttpRequest;
+import org.springframework.security.config.Customizer;
 import org.springframework.security.config.annotation.web.reactive.EnableWebFluxSecurity;
 import org.springframework.security.config.web.server.ServerHttpSecurity;
-import org.springframework.security.core.GrantedAuthority;
-import org.springframework.security.core.authority.SimpleGrantedAuthority;
-import org.springframework.security.oauth2.jwt.Jwt;
-import org.springframework.security.oauth2.server.resource.authentication.ReactiveJwtAuthenticationConverter;
 import org.springframework.security.web.server.SecurityWebFilterChain;
-import reactor.core.publisher.Flux;
-import reactor.core.publisher.Mono;
+import org.springframework.web.cors.CorsConfiguration;
+import org.springframework.web.cors.reactive.CorsConfigurationSource;
+import org.springframework.web.cors.reactive.UrlBasedCorsConfigurationSource;
 
-import java.util.Collections;
 import java.util.List;
-import java.util.stream.Collectors;
 
 @Configuration
 @EnableWebFluxSecurity
@@ -27,26 +24,49 @@ public class SecurityConfig {
         http.csrf(ServerHttpSecurity.CsrfSpec::disable)
                 .authorizeExchange(exchange -> exchange
                         .pathMatchers("/eureka/**").permitAll()
-                        .anyExchange().authenticated())
-                .oauth2ResourceServer(oAuth -> oAuth
-                        .jwt(jwt -> jwt
-                                .jwtAuthenticationConverter(jwtAuthenticationConverter())));
+                        .pathMatchers("/**").permitAll()
+                        .anyExchange().authenticated());
+//                .oauth2ResourceServer(oAuth -> oAuth.jwt(Customizer.withDefaults()));
         return http.build();
     }
 
+//    @Bean
+//    public ReactiveJwtAuthenticationConverter  jwtAuthenticationConverter() {
+//        ReactiveJwtAuthenticationConverter converter = new ReactiveJwtAuthenticationConverter();
+//        converter.setJwtGrantedAuthoritiesConverter(jwt -> {
+//            List<String> roles = jwt.getClaimAsStringList("roles");
+//            if (roles == null) {
+//                roles = Collections.emptyList();
+//            }
+//            List<GrantedAuthority> authorities = roles.stream()
+//                    .map(role -> new SimpleGrantedAuthority("ROLE_" + role.toUpperCase()))
+//                    .collect(Collectors.toList());
+//            return Flux.fromIterable(authorities);
+//        });
+//        return converter;
+//    }
+
     @Bean
-    public Converter<Jwt, Mono<AbstractAuthenticationToken>> jwtAuthenticationConverter() {
-        ReactiveJwtAuthenticationConverter converter = new ReactiveJwtAuthenticationConverter();
-        converter.setJwtGrantedAuthoritiesConverter(jwt -> {
-            List<String> roles = jwt.getClaimAsStringList("roles");
-            if (roles == null) {
-                roles = Collections.emptyList();
-            }
-            List<GrantedAuthority> authorities = roles.stream()
-                    .map(role -> new SimpleGrantedAuthority("ROLE_" + role))
-                    .collect(Collectors.toList());
-            return Flux.fromIterable(authorities);
-        });
-        return converter;
+    public CorsConfigurationSource corsConfiguration() {
+        CorsConfiguration corsConfiguration = new CorsConfiguration();
+        corsConfiguration.setAllowedOrigins(List.of("*"));
+        corsConfiguration.setAllowedMethods(List.of("*"));
+        corsConfiguration.setAllowedHeaders(List.of("*"));
+        corsConfiguration.setAllowCredentials(true);
+        corsConfiguration.setMaxAge(3600L);
+
+        UrlBasedCorsConfigurationSource source = new UrlBasedCorsConfigurationSource();
+        source.registerCorsConfiguration("/**", corsConfiguration);
+        return source;
     }
+
+//    @Bean
+//    public GatewayFilter jwtForwardingFilter() {
+//        return (exchange, chain) -> {
+//            ServerHttpRequest request = exchange.getRequest().mutate()
+//                    .header(HttpHeaders.AUTHORIZATION, exchange.getRequest().getHeaders().getFirst(HttpHeaders.AUTHORIZATION))
+//                    .build();
+//            return chain.filter(exchange.mutate().request(request).build());
+//        };
+//    }
 }
